Bug 405191 - Edit opens blank until file is saved
Summary: Edit opens blank until file is saved
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.4
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-07 19:10 UTC by Aaron Wolf
Modified: 2019-03-09 02:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Wolf 2019-03-07 19:10:35 UTC
STEPS TO REPRODUCE
1. Make a new entry (e.g. a book)
2. close it
3. double-click to edit it

OBSERVED RESULT

The editor is empty, like I'm making a new entry. It switches to working correctly after I save the collection file (ctrl-S).

EXPECTED RESULT

Double-clicking an entry should show all the entry details regardless of the save state of the collection.

SOFTWARE/OS VERSIONS
I'm running latest KDE Neon user edition
Comment 1 Robby Stephenson 2019-03-09 02:58:10 UTC
Git commit b09adea92b8fb4ebc265f861c457a16a5a62bede by Robby Stephenson.
Committed on 09/03/2019 at 02:55.
Pushed by rstephenson into branch 'master'.

Be sure to select entry to edit when double-clicking in new collection

Why double-clicking in the Entry Icon View doesn't emit selectionChanged
is unknown to me, so ensure entry is poulated into Entry Edit Dialog
when Controller:editEntry() is called
FIXED-IN: 3.1.5

M  +2    -1    src/controller.cpp
M  +3    -1    src/entryeditdialog.cpp

https://commits.kde.org/tellico/b09adea92b8fb4ebc265f861c457a16a5a62bede
Comment 2 Robby Stephenson 2019-03-09 02:58:40 UTC
Git commit f8e039ad085cefc940c8b06a178e46d5d490c30b by Robby Stephenson.
Committed on 09/03/2019 at 02:58.
Pushed by rstephenson into branch '3.1'.

Be sure to select entry to edit when double-clicking in new collection

Why double-clicking in the Entry Icon View doesn't emit selectionChanged
is unknown to me, so ensure entry is poulated into Entry Edit Dialog
when Controller:editEntry() is called
FIXED-IN: 3.1.5

M  +2    -1    src/controller.cpp
M  +3    -1    src/entryeditdialog.cpp

https://commits.kde.org/tellico/f8e039ad085cefc940c8b06a178e46d5d490c30b