Be sure to select entry to edit when double-clicking in new collection

Why double-clicking in the Entry Icon View doesn't emit selectionChanged
is unknown to me, so ensure entry is poulated into Entry Edit Dialog
when Controller:editEntry() is called

BUG: 405191
FIXED-IN: 3.1.5